k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: knaval-ingress
  namespace: knaval
spec:
  ingressClassName: nginx
  rules:
  - host: app.knaval.az.diogohack.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 3000

  - host: api.knaval.az.diogohack.shop
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 3001
